# jumeaux

./: .editorconfig  .gitignore  .gitleaks.toml  .pylintrc  .pypirc  .travis.yml  AGENTS.md  Dockerfile  Dockerfile.release  Jenkinsfile  LICENSE  Makefile  Pipfile  README.md  README.rst  docker-compose.yml  gemini.py  jumeaux.py  mkdocs.yml  pyproject.toml  pytest.ini  release.sh  requirements.txt  setup.cfg  setup.py  test.bats
.claude/skills/jumeaux-release/: SKILL.md
.codex/skills/jumeaux-release/: SKILL.md
.github/workflows/: release.yaml  tests.yaml
.run/: e2e test.run.xml  unit test.run.xml
addons/: __init__.py
addons/after/gemini-viewer-addon/: __init__.py
addons/after/gemini_viewer_addon/: __init__.py
addons/after/slack_addon/: __init__.py
addons/default-response-parser-addon/: __init__.py
addons/dump/: __init__.py  encoding.py  json.py  xml.py
addons/dump/encoding_addon/: __init__.py
addons/dump/json_addon/: __init__.py
addons/dump/xml_addon/: __init__.py
addons/final/: __init__.py  aws.py  slack.py
addons/gemini-viewer-addon/: __init__.py
addons/hello/: main.py
addons/json-response-parser-addon/: __init__.py
addons/judgement/: __init__.py  ignore_properties.py
addons/judgement/ignore_property_addon/: __init__.py
addons/log/apache-addon/: __init__.py
addons/log/apache_addon/: __init__.py
addons/log/csv-addon/: __init__.py
addons/log/csv_addon/: __init__.py
addons/log/plain_addon/: __init__.py
addons/log/yaml_addon/: __init__.py
addons/log2reqs/: __init__.py  apache.py  csv.py  json.py  plain.py  yaml.py
addons/reqs2reqs/: __init__.py  filter.py  head.py  shuffle.py
addons/request/filter_addon/: __init__.py
addons/request/head_addon/: __init__.py
addons/request/shuffle_addon/: __init__.py
addons/res2dict/: __init__.py  json.py  xml.py
addons/res2dict/json_addon/: __init__.py
addons/res2dict/xml_addon/: __init__.py
addons/response-encoding-converter-addon/: __init__.py
addons/xml-response-parser-addon/: __init__.py
docs/: 404.html  index.html  index.md  sitemap.xml
docs/css/: custom.css
docs/getstarted/: configuration.md  quickstart.md
docs/getstarted/configuration/: index.html
docs/getstarted/quickstart/: index.html
docs/getstarted/report/: index.html
docs/ja/addons/: did_challenge.md  dump.md  final.md  index.html  index.md  judgement.md  log2reqs.md  reqs2reqs.md  res2dict.md  res2res.md  store_criterion.md
docs/ja/notify-prerequirements/: index.html
docs/ja/releases/: index.html
docs/ja/template/: index.html
docs/ja/todo/: index.html
docs/models/: and_or.md  request-condition.md  request.md  status.md
docs/models/request/: index.html
docs/models/request-condition/: index.html
docs/search/: search_index.json
e2e/: conftest.py  main.py
jumeaux/: __init__.py  configmaker.py  executor.py  logger.py  main.py  models.py  utils.py
jumeaux/addons/: __init__.py  conditions.py  models.py  parser.py  utils.py
jumeaux/addons/did_challenge/: __init__.py  sleep.py  tag.py
jumeaux/addons/dump/: __init__.py  encoding.py  html.py  json.py  xml.py
jumeaux/addons/final/: __init__.py  aws.py  csv.py  json.py  miroir.py  notify.py  slack.py  summary.py  viewer.py
jumeaux/addons/judgement/: __init__.py  ignore.py  ignore_properties.py  same.py
jumeaux/addons/log2reqs/: __init__.py  apache.py  csv.py  json.py  plain.py  yaml.py
jumeaux/addons/reqs2reqs/: __init__.py  add.py  empty_guard.py  filter.py  head.py  name.py  rename.py  repeat.py  replace.py  replace_queries.py  shuffle.py
jumeaux/addons/res2dict/: __init__.py  block.py  html.py  json.py  richplain.py  xml.py
jumeaux/addons/res2res/: __init__.py  json.py  json_sort.py  type.py
jumeaux/addons/store_criterion/: __init__.py  free.py  general.py
jumeaux/commands/init/: main.py
jumeaux/commands/retry/: main.py
jumeaux/commands/run/: main.py
jumeaux/commands/server/: main.py
jumeaux/commands/viewer/: main.py
jumeaux/domain/config/: service.py  vo.py
jumeaux/handlers/: init.py  server.py  viewer.py
jumeaux/notification_handlers/: __init__.py  base.py  slack.py  slack2.py
jumeaux/sample/addon/: Makefile  Pipfile  README.rst  setup.py
jumeaux/sample/ignore_properties/: config.yml
jumeaux/sample/json/: config.yml  requests
jumeaux/sample/minimum/: config.yml  requests
jumeaux/sample/rest/: config.yml
jumeaux/sample/viewer/: index.html
mkdocs/: index.md
mkdocs/constants/: and_or.md
mkdocs/css/: custom.css
mkdocs/getstarted/: quickstart.md
mkdocs/ja/: notify-prerequirements.md  template.md
mkdocs/ja/addons/: did_challenge.md  dump.md  final.md  index.md  judgement.md  log2reqs.md  reqs2reqs.md  res2dict.md  res2res.md  (+1 more)
mkdocs/models/: request-condition.md
modules/: dictutils.py  models.py  requestcreator.py
sample/: config-localstack.yml  config.yaml  config.yml  requests.csv
template/: Dockerfile
test/: test_gemini.py  test_requestcreator.py
tests/: base_config.yaml  config.json  config.yaml  config_no_base.yaml  conftest.py  test_configmaker.py  test_executor.py  test_gemini.py  test_jumeaux.py  test_models.py  test_requestcreator.py  test_utils.py  testlog1.csv
tests/addons/: test_conditions.py  test_utils.py
tests/config/: config.json
(+141 files in other folders)
