[tool.poetry]
name = "jumeaux"
version = "4.0.1"
description = "Check difference between two responses of API."
authors = ["tadashi-aikawa <syou.maman@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://tadashi-aikawa.github.io/jumeaux"
repository = "https://github.com/tadashi-aikawa/jumeaux/blob/master/README.md"
documentation = "https://tadashi-aikawa.github.io/jumeaux"
keywords = ["diff rest api response regression test"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing"
]

[tool.poetry.dependencies]
python = "^3.7.0"
requests = "^2.22.0"
docopt = "^0.6.2"
schema = "^0.7.1"
xmltodict = "^0.12.0"
boto3 = "^1.10.28"
freezegun = "^0.3.12"
pydash = "^4.7.6"
requests-toolbelt = "^0.9.1"
jinja2 = "^2.10.3"
beautifulsoup4 = "^4.8.1"
lxml = "^4.4.2"
livereload = "^2.6.1"
tzlocal = "^2.0.0"
owlmixin = "^6.0.0"
owcli = "^0.8.0"
deepdiff = "6.2.1" # sensitive
markupsafe = "2.0.1" # sensitive
urllib3 = "<2" # sensitive

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mkdocs = "^1.2.3"
mkdocs-material = "^6.1.0"
pymdown-extensions = "^10.0"
fontawesome-markdown = "^0.2.6"
black = {extras = ["d"], version = "^23.3.0"}

[tool.poetry.plugins."console_scripts"]
"jumeaux" = "jumeaux.main:main"

[tool.black]
line-length = 100
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[build-system]
requires = ["poetry>=1.5"]
build-backend = "poetry.masonry.api"

