[tool.poetry]
name = "jumeaux"
version = "4.1.0"
description = "Check difference between two responses of API."
authors = ["tadashi-aikawa <syou.maman@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://tadashi-aikawa.github.io/jumeaux"
repository = "https://github.com/tadashi-aikawa/jumeaux/blob/master/README.md"
documentation = "https://tadashi-aikawa.github.io/jumeaux"
keywords = ["diff rest api response regression test"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing"
]

[tool.poetry.dependencies]
python = "^3.8.0"
requests = "^2.22.0"
docopt = "^0.6.2"
schema = "^0.7.1"
xmltodict = "^0.12.0"
boto3 = "^1.10.28"
freezegun = "^0.3.12"
pydash = ">=4.7.6,<7.0.0"
requests-toolbelt = "^0.9.1"
beautifulsoup4 = "^4.8.1"
lxml = "^4.4.2"
livereload = "^2.6.1"
tzlocal = "^2.0.0"
owlmixin = "^6.2.1"
owcli = "^0.8.0"
deepdiff = "6.2.1" # sensitive
markupsafe = "2.0.1" # sensitive
urllib3 = "<2" # sensitive
jinja2 = "^3.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
# https://github.com/aio-libs/aiohttp/issues/7739
aiohttp = "3.9.4"

[tool.poetry.plugins."console_scripts"]
"jumeaux" = "jumeaux.main:main"


[tool.poetry.group.dev.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.4.6"
ruff = "^0.3.7"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
# ここのインポート順を変えると動かなくなるので...
"main.py" = ["E402"]

[build-system]
requires = ["poetry>=1.5"]
build-backend = "poetry.masonry.api"

