[project]
authors = [
    {name = "tadashi-aikawa", email = "syou.maman@gmail.com"},
]
license = {text = "MIT"}
requires-python = "<4.0.0,>=3.9.0"
dependencies = [
    "requests<3.0.0,>=2.22.0",
    "docopt<1.0.0,>=0.6.2",
    "schema<1.0.0,>=0.7.1",
    "xmltodict<1.0.0,>=0.12.0",
    "boto3<2.0.0,>=1.10.28",
    "freezegun<2.0.0,>=1.5.1",
    "pydash<7.0.0,>=4.7.6",
    "requests-toolbelt<1.0.0,>=0.9.1",
    "beautifulsoup4<5.0.0,>=4.8.1",
    "lxml<6.0.0,>=5.3.0",
    "livereload<3.0.0,>=2.6.1",
    "tzlocal<3.0.0,>=2.0.0",
    "owlmixin<7.0.0,>=6.2.1",
    "owcli<1.0.0,>=0.8.0",
    "deepdiff==6.2.1",
    "markupsafe==2.0.1",
    "urllib3<2",
    "jinja2<4.0.0,>=3.1.2",
]
name = "jumeaux"
version = "5.0.5"
description = "Check difference between two responses of API."
readme = "README.md"
keywords = [
    "diff rest api response regression test",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
]

[project.urls]
homepage = "https://tadashi-aikawa.github.io/jumeaux"
repository = "https://github.com/tadashi-aikawa/jumeaux/blob/master/README.md"
documentation = "https://tadashi-aikawa.github.io/jumeaux"

[project.scripts]
jumeaux = "jumeaux.main:main"

[dependency-groups]
dev = [
    "mkdocs<2.0.0,>=1.5.3",
    "mkdocs-material<10.0.0,>=9.4.6",
    "ruff<1.0.0,>=0.3.7",
    "pytest<8.0.0,>=7.2.0",
    "pytest-cov<5.0.0,>=4.0.0",
    # https://github.com/aio-libs/aiohttp/issues/7739
    "aiohttp<4.0.0,>=3.10.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.lint.per-file-ignores]
# ここのインポート順を変えると動かなくなるので...
"main.py" = ["E402"]

